--- a/练习/第02章 算法基础.md
+++ b/练习/第02章 算法基础.md
@@ -80,3 +80,37 @@ ADD-BINARY(A, B):
 
   return C
 ```
+
+## 2.2
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.2.png)
+
+### 2.2-1
+Θ(n³)
+
+### 2.2-2
+伪代码：
+```
+SELECTION-SORT(A)
+	for i=1 to n
+		index = i 
+		j = i + 1
+		while j <= n
+			if A[index] > A [j]
+				index = j
+			j = j +1
+		if index != i
+			key = A[index]
+			A[index] = A[i]
+			A[i] = key
+```
+最好情况：θ(n²)
+最坏请求：θ(n²)
+
+### 2.2-3
+1. 平均需要查找 n/2 个元素
+2. n
+3. 平均情况θ(n) 最坏情况 θ(n)
+
+
+## 2.3
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3.png)
