--- a/练习/第02章 算法基础.md
+++ b/练习/第02章 算法基础.md
@@ -114,3 +114,43 @@ SELECTION-SORT(A)
 
 ## 2.3
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3.png)
+
+## 2.3-1
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-1.png)
+
+## 2.3-2
+```
+MERGE(A,p,q,r)
+	n1 = q - p  + 1
+	n2 = r - q
+	L = new integer[n1]
+	R = new integer[n2]
+	for i=1 to n1
+		L[i]=A[p+i-1]
+	for i=1 to n1
+		R[i]=A[q+i]
+	i = j = 1
+	for k=p to r
+		if i > n1 //说明数组L空了，需要将R数组中剩下的元素复制到数组A
+			A[K] = R[j]
+			j = j + 1
+		else if j > n2//说明数组R空了，需要将L数组中剩下的元素复制到数组A
+			A[k] = L[i]
+			i = i + 1
+		else//L、R数组都没有空
+			if L[i] <= R[j] 
+				A[k] = L[i]
+				i = i + 1
+			else
+				A[K] = R[j]
+				j = j + 1
+	
+			
+	
+```
+## 2.3-3
+## 2.3-4
+## 2.3-5
+## 2.3-6
+## 2.3-7
+
