--- a/练习/第02章 算法基础.md
+++ b/练习/第02章 算法基础.md
@@ -146,6 +146,30 @@ MERGE(A,p,q,r)
 				j = j + 1
 ```
 ## 2.3-3
+使用数学归纳法证明：当n刚好是2的幂时，以下递归式的解释 $T(n)=nlgn$。
+
+$$ T(n) = \begin{cases}
+     2           &amp; \text{if } n = 2, \\
+     2T(n/2) + n &amp; \text{if } n = 2^k, \text{for } k > 1.
+   \end{cases} $$
+
+证明：
+
+当 n = 2   $ T(2)=2lg2 = 2 $  成立
+
+假设 当 $n = 2^k$  时 $T(2^k)=2^klg2^k$ 成立
+
+则：当 $n = 2^{k+1} $ 时
+$$
+T(2^{k+1})=2T({2^{k+1}}/2)+2^{k+1}
+=2T(2^k)+2^{k+1}
+=2*2^klg2^k+2^{k+1}\\
+=2^{k+1}*(lg2^k+1)
+=2^{k+1}*(lg2^k+lg2)
+=2^{k+1}*(lg2^{k+1})
+$$
+
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-3.png)
 ## 2.3-4
 ## 2.3-5
 伪代码
@@ -330,3 +354,4 @@ static int[] MARGE(int[] A, int p, int q, int r)
     return A;
 }
 ```
+
