--- a/练习/第02章 算法基础.md
+++ b/练习/第02章 算法基础.md
@@ -171,6 +171,13 @@ $$
 
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-3.png)
 ## 2.3-4
+递归式为:
+
+$$ T(n) = \begin{cases}
+     1           &amp; \text{if } n = 1, \\
+     T(n-1) + (n-1) &amp; \text{if } n > 1.
+   \end{cases} $$
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-4.png)
 ## 2.3-5
 伪代码
 ```
