--- a/练习/第02章 算法基础.md
+++ b/练习/第02章 算法基础.md
@@ -361,4 +361,32 @@ static int[] MARGE(int[] A, int p, int q, int r)
     return A;
 }
 ```
+# 思考题
+## 2-1
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-1_q.png)
 
+### a
+当排序长度为k的字表时，插入排序的时间为 T(k)=ak²+bk+c
+
+所以 当n/k个长度为k的子表的时间为 $\frac{n}{k}{(ak^2+bk+c)}=ank+bn+c{\frac{n}{k}}=\theta(nk)$
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-1-a.png)
+
+### b
+在归并排序中每一次合并的时间为：θ(n)，一共会产生lg(n/k)次，所以最坏情况下的复杂度为θ(nlg(n/k))  
+
+### c
+归并排序的运行时间为：$\theta(nlgn)$ 为使得$\theta(nk+nlg(n/k))=\theta(nlgn)$
+
+z当 $k=lgn$ 时 满足 $\theta(nlgn+nlg(n/lgn))=\theta(nlgn)$
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-1-c.png)
+
+### d
+It's constant factors, so we just figure out when insertion sort beats merge sort, exactly as we did in exercise 1.2.2, and pick that number for k.
+## 2-2
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-2_q.png)
+
+## 2-3
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-3_q.png)
+
+## 2-4
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-4_q.png)
