--- a/练习/第02章 算法基础.md
+++ b/练习/第02章 算法基础.md
@@ -1,5 +1,8 @@
-# 第二章 算法基础 练习
+# 第二章 算法基础
 
+[toc]
+
+# 练习
 ## 2.1
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.1.png)
 ### 2.1-1
@@ -115,10 +118,10 @@ SELECTION-SORT(A)
 ## 2.3
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3.png)
 
-## 2.3-1
+### 2.3-1
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-1.png)
 
-## 2.3-2
+### 2.3-2
 ```
 MERGE(A,p,q,r)
 	n1 = q - p  + 1
@@ -131,10 +134,10 @@ MERGE(A,p,q,r)
 		R[i]=A[q+i]
 	i = j = 1
 	for k=p to r
-		if i > n1 //说明数组L空了，需要将R数组中剩下的元素复制到数组A
+		if i >= n1 //说明数组L空了，需要将R数组中剩下的元素复制到数组A
 			A[K] = R[j]
 			j = j + 1
-		else if j > n2//说明数组R空了，需要将L数组中剩下的元素复制到数组A
+		else if j >= n2//说明数组R空了，需要将L数组中剩下的元素复制到数组A
 			A[k] = L[i]
 			i = i + 1
 		else//L、R数组都没有空
@@ -145,7 +148,7 @@ MERGE(A,p,q,r)
 				A[K] = R[j]
 				j = j + 1
 ```
-## 2.3-3
+### 2.3-3
 使用数学归纳法证明：当n刚好是2的幂时，以下递归式的解释 $T(n)=nlgn$。
 
 $$ T(n) = \begin{cases}
@@ -170,7 +173,7 @@ T(2^{k+1})=2T({2^{k+1}}/2)+2^{k+1}
 $$
 
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-3.png)
-## 2.3-4
+### 2.3-4
 递归式为:
 
 $$ T(n) = \begin{cases}
@@ -178,7 +181,7 @@ $$ T(n) = \begin{cases}
      T(n-1) + (n-1) &amp; \text{if } n > 1.
    \end{cases} $$
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2.3-4.png)
-## 2.3-5
+### 2.3-5
 伪代码
 ```
 MERGE-FIND(A,begin,end,v)
@@ -229,9 +232,9 @@ static int MERGE_FIND(int[] A, int begin, int end, int v)
 }
     
 ```
-## 2.3-6
+### 2.3-6
 答：不能，因为即便缩短了查找的速度，但是还是需要将比它大的元素依次向后移动，这在最坏去情况下是线性的。
-## 2.3-7
+### 2.3-7
 伪代码：
 ```
 EXIST_PAIR(S,x)
@@ -365,28 +368,195 @@ static int[] MARGE(int[] A, int p, int q, int r)
 ## 2-1
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-1_q.png)
 
-### a
+### a.
 当排序长度为k的字表时，插入排序的时间为 T(k)=ak²+bk+c
 
 所以 当n/k个长度为k的子表的时间为 $\frac{n}{k}{(ak^2+bk+c)}=ank+bn+c{\frac{n}{k}}=\theta(nk)$
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-1-a.png)
 
-### b
+### b.
 在归并排序中每一次合并的时间为：θ(n)，一共会产生lg(n/k)次，所以最坏情况下的复杂度为θ(nlg(n/k))  
 
-### c
+### c.
 归并排序的运行时间为：$\theta(nlgn)$ 为使得$\theta(nk+nlg(n/k))=\theta(nlgn)$
 
 z当 $k=lgn$ 时 满足 $\theta(nlgn+nlg(n/lgn))=\theta(nlgn)$
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-1-c.png)
 
-### d
+### d.
 It's constant factors, so we just figure out when insertion sort beats merge sort, exactly as we did in exercise 1.2.2, and pick that number for k.
 ## 2-2
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-2_q.png)
 
+### b.
+注：这一问研究的是内循环
+**循环不变式：**
+A[j-1]是A[j-1...n]数组中最小的元素。
+**初始化：** 
+当开始循环之前，数组A中只有一个元素A[n],所以循环不变式是成立的。
+**保持：**
+在之后的每次循环中，如果A[j]<A[j-1]那么我们将它们交换，这样我们就可以使得每一次的A[j-1]<[j],就能得到A[j-1]是A[j-1...n]中最小的。
+**终止：**
+当循环结束的时候 j-1=i ,这意味着A[i]是子数组A[i...n]的最小元素
+
+### c
+注：这一问研究的是外层循环
+**循环不变式：**
+A[1...i]是有序的。
+**初始化：** 
+当开始循环之前，数据A是空的，所以数组是有序的。
+**保持：**
+在之后的每次循环中，我们可以保持A[i]是数组A[i...n]中最小的一个元素，所以，每次循环后数组A[1...i]是有序的。
+**终止：**
+当循环结束的时候 i=n ,这意味着数组A[1...n]是有序的。
+### d.
+冒泡排序的最坏运行时间为θ(n²)，与插入排序性能一样。
 ## 2-3
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-3_q.png)
+### a.
+θ(n)
 
+### b.
+```
+y=0
+for i=0 to n
+	temp = 1
+	for j=0 to i
+		temp = temp * x
+	y = y + A[i] * temp 
+```
+运行时间为θ(n²)。性能不如霍纳规则。
+### c.
+...
+### d.
+...
 ## 2-4
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/2-4_q.png)
+### a.
+(2,1) (3,1) (8,6) (8,1) (6,1)
+### b.
+ 降序数组。有 n*(n-1)/2
+### c.
+如果插入排序的运行时间为θ(n+d)，那么d就是逆序对的数量。
+
+因为插入排序在给A[i]确定位置时，会与A[0...i-1]元素进行比较，如果小于那么需要进行相应的交换，交换的次数对应的就是逆序对出现的次数。然后所有的循环完毕，逆序对相加就是总的逆序对。
+所以当插入排序的运行时间为θ(n+d)。那么n是循环的时间；d就是交换元素的次数，也就是逆序对的数量。
+
+### d.
+```
+MERGE-SORT(A, p, r):
+  if p < r
+      inversions = 0
+      q = (p + r) / 2
+      inversions += MERGE-SORT(A, p, q)
+      inversions += MERGE-SORT(A, q + 1, r)
+      inversions += MERGE(A, p, q, r)
+      return inversions
+  else
+      return 0
+
+MERGE(A,p,q,r)
+	inversions = 0
+    n1 = q - p  + 1
+    n2 = r - q
+    L = new integer[n1]
+    R = new integer[n2]
+    for i=1 to n1
+        L[i]=A[p+i-1]
+    for i=1 to n1
+        R[i]=A[q+i]
+    i = j = 1
+    for k=p to r
+        if i >= n1 //说明数组L空了，需要将R数组中剩下的元素复制到数组A
+            A[K] = R[j]
+            j = j + 1
+        else if j >= n2//说明数组R空了，需要将L数组中剩下的元素复制到数组A
+            A[k] = L[i]
+            i = i + 1
+        else//L、R数组都没有空
+            if L[i] <= R[j] 
+                A[k] = L[i]
+                i = i + 1
+            else
+                A[K] = R[j]
+                j = j + 1
+				inversions = inversions + 1//因为这里的i始终会小于j的（在实际数组中），并且此时L[i]>R[j]，所以这里是一个逆序对
+	return inversions
+```
+
+C# 代码：
+```csharp
+public static void show()
+{
+    int[] B = new int[] { 3, 41, 52, 26, 57, 9, 49 };
+    inversions = 0;
+    Console.WriteLine("数组:{0}", string.Join(",", B));
+    Console.WriteLine(string.Join(",", MARGE_SORT(B, 0, B.Length - 1)));
+    Console.WriteLine("inversions:{0}", inversions);
+}
+
+static int inversions = 0;
+static int[] MARGE_SORT(int[] A, int p, int r)
+{
+    if (p < r)
+    {
+        int q = (p + r) / 2;
+        A = MARGE_SORT(A, p, q);
+        A = MARGE_SORT(A, q + 1, r);
+        return MARGE(A, p, q, r);
+    }
+    return A;
+}
+static int[] MARGE(int[] A, int p, int q, int r)
+{
+    int n1 = q - p + 1;
+    int n2 = r - q;
+    int[] L = new int[n1];
+    int[] R = new int[n2];
+
+    int i;
+    int j;
+
+    for (i = 0; i < n1; i++)
+    {
+        L[i] = A[i + p];
+    }
+
+    for (i = 0; i < n2; i++)
+    {
+        R[i] = A[i + q + 1];
+    }
+
+    i = 0;
+    j = 0;
+    for (int k = p; k <= r; k++)
+    {
+        if (i >= n1)
+        { //说明数组L空了，需要将R数组中剩下的元素复制到数组A
+            A[k] = R[j];
+            j = j + 1;
+        }
+        else if (j >= n2)
+        {//说明数组R空了，需要将L数组中剩下的元素复制到数组A
+            A[k] = L[i];
+            i = i + 1;
+        }
+        else
+        {//L、R数组都没有空
+            if (L[i] <= R[j])
+            {
+                A[k] = L[i];
+                i = i + 1;
+            }
+            else
+            {
+                A[k] = R[j];
+                Console.WriteLine("({0},{1})", L[i], R[j]);
+                inversions++;
+                j = j + 1;
+            }
+        }
+    }
+    return A;
+}
+```
