--- a/练习/第03章 函数的增长.md
+++ b/练习/第03章 函数的增长.md
@@ -4,9 +4,40 @@
 ## 3.1
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1.png)
 ### 3.1-1
+证明：
+∵ f(n)与g(n)都是渐进非负函数
+∴ f(n)=θ(f(n)), g(n)=θ(g(n))
+∴ max(f(n)，g(n))=θ(f(n)+g(n))
 ### 3.1-2
+证明：
+
+∵ $(n+a)^b=n^b+an^{b-1}+...+na^{b-1}+a^b$
+
+∴ $(n+a)^b=θ(n^b)+θ(n^{b-1})+...+θ(n^2)+θ(n)+θ(1)$
+
+∴ $(n+a)^b=θ(n^b)$
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-2.png)
+
 ### 3.1-3
 ### 3.1-4
+证明：
+
+**1.** 假设$2^{n+1}=O(2^n)$成立
+
+则 $2^{n+1}$ 存在正常量 c和$n_0$，使得对所有$n>=n_0$,有$0<=2^{n+1}<=c*2^n$
+ 
+∵当 $n_0=1 ,c=1$ 时，等式成立。
+
+∴$2^{n+1}=O(2^n)$成立
+
+**2.** 假设$2^{2n}=O(2^n)$成立
+
+则 $2^{2n}$ 存在正常量 c和$n_0$，使得对所有$n>=n_0$,有$0<=2^{2n}<=c*2^n$
+
+∵当不存在 正常量c和$n_0$
+
+∴$2^{2n}=O(2^n)$不成立
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-4.png)
 ### 3.1-5
 ### 3.1-6
 ### 3.1-7
