--- a/练习/第03章 函数的增长.md
+++ b/练习/第03章 函数的增长.md
@@ -1,4 +1,4 @@
-#第03章 函数的增长#
+# 第03章 函数的增长 #
 
 # 练习
 ## 3.1
@@ -24,6 +24,7 @@
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-2.png)
 
 ### 3.1-3
+因为O表示渐进上界，而至少又是表示下界，所以是无意义的。
 ### 3.1-4
 证明：
 
@@ -45,6 +46,23 @@
 
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-4.png)
 ### 3.1-5
+**定理3.1**：对任意两个函数$f(n)和g(n)$，我们有$f(n)=θ(g(n))$，当且仅当$f(n)=O(g(n))$且$f(n)=Ω(g(n))$
+
+证明:
+
+∵ $f(n)=θ(g(n))$
+
+∴ $f(n)$：存在正常量$c_1、c_2和n_0$，使得对所有$n>=n_0$，有$0<=c_1g(n)<=f(n)<=c_2g(n)$
+
+∵ $f(n)=O(g(n))$表示：$f(n)$：存在正常量$c和n_0$，使得对所有$n>=n_0$，有$0<=f(n)<=cg(n)$
+
+∴ $f(n)=O(g(n))$ 成立
+
+∵ $f(n)=Ω(g(n))$表示：$f(n)$：存在正常量$c和n_0$，使得对所有$n>=n_0$，有$0<=cg(n)<=f(n)$
+
+∴ $f(n)=Ω(g(n))$ 成立
+
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-5.png)
 ### 3.1-6
 ### 3.1-7
 ### 3.1-8
