--- a/练习/第03章 函数的增长.md
+++ b/练习/第03章 函数的增长.md
@@ -64,8 +64,33 @@
 
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-5.png)
 ### 3.1-6
+同上
 ### 3.1-7
+证明：$o(g(n))\cap\omega(g(n))$为空集。
+
+证明：
+
+因为：$o(g(n))$={$f(n)$：对任意正常量$c>0$，存在常量$n_0>0$，使得对所有$n>=n_0$，有$0<=f(n)<cg(n)$} 
+
+并且
+
+$\omega(g(n))$={$f(n)$：对任意正常量$c>0$，存在常量$n_0>0$，使得对所有$n>=n_0$，有$0<=cg(n)<f(n)$} 
+
+所以：$o(g(n))\cap\omega(g(n))$=$(0<=f(n)<cg(n))\cap(0<=cg(n)<f(n))$
+
+因为：不可能出现$f(n)<cg(n)$并且$cg(n)<f(n)$
+
+所以：$o(g(n))\cap\omega(g(n))$为空集。
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.1-7.png)
 ### 3.1-8
+$O(g(n,m))$={$f(n,m)$:存在正常量$c、n_0和m_0$，使得对所有$n>=n_0$或$m>=m_0$，有$0<=f(n,m)<=cg(n,m)$}
+
+$\theta(g(n,m))$={$f(n,m)$:存在正常量$c_1、c_2、n_0和m_0$，使得对所有$n>=n_0$或$m>=m_0$，有$0<=c_1g(n,m)<=f(n,m)<=c_2g(n,m)$}
+
+$Ω(g(n,m))$={$f(n,m)$:存在正常量$c、n_0和m_0$，使得对所有$n>=n_0$或$m>=m_0$，有$0<=cg(n,m)<=f(n,m)$}
+
+
+
 ## 3.2
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/03/3.2.png)
 ### 3.2-1
