--- a/练习/第04章 分治策略 4.1 最大子数组问题.md
+++ b/练习/第04章 分治策略 4.1 最大子数组问题.md
@@ -1,6 +1,7 @@
-# 第04章 分治策略
+# 第04章 分治策略 
 
-## 4.1
+## 4.1 最大子数组问题
+
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/04/4.1.jpg)
 
 ### 4.1-1
@@ -800,3 +801,32 @@ static Result Find_Maximum_Crossing_Subarray(int[] A, int low, int mid, int high
 
 ### 4.1-5
 
+C# 代码：
+
+```csharp
+static Result Find_Maximum_Linear(int[] A)
+{
+    Result result = new Result();
+    result.Sum = Int32.MinValue;
+    int leftIndex = 0;
+    int maxSum = 0;
+    for (int i = 0; i < A.Length; i++)
+    {
+        maxSum += A[i];
+        if (maxSum > result.Sum)
+        {
+            result.Sum = maxSum;
+            result.Left = leftIndex;
+            result.Right = i;
+        }
+
+        if (maxSum < 0)
+        {
+            leftIndex = i+1;
+            maxSum = 0;
+        }
+    }
+
+    return result;
+}
+```
