--- a/练习/第06章 堆排序.md
+++ b/练习/第06章 堆排序.md
@@ -36,7 +36,13 @@
 
 ![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/06/6.2-1.png)
 
-当A.heap-size=14时，MAX-HEAPIFY(A,3)的执行过程。（a）初始状态，在结点i=3处，A[3]违背了最大堆性质，因为它的值不大于它的孩子。 在（b）中通过交换A[3]与A[6]的值，结点3恢复了最大堆的性质，但又导致了结点6违反了最大堆的性质。递归调用MAX-HEAPIFY(A,6)，此时i=6。在（c）中，通过交换A[6]和A[13]的值，结点6恢复最大堆性质。再次调用MAX-HEAPIFY(A,13)，此时不再有新的数据交换
+当A.heap-size=14时，MAX-HEAPIFY(A,3)的执行过程。
+
+​	（a）初始状态，在结点i=3处，A[3]违背了最大堆性质，因为它的值不大于它的孩子。 
+
+​	在（b）中通过交换A[3]与A[6]的值，结点3恢复了最大堆的性质，但又导致了结点6违反了最大堆的性质。递归调用MAX-HEAPIFY(A,6)，此时i=6。
+
+​	在（c）中，通过交换A[6]和A[13]的值，结点6恢复最大堆性质。再次调用MAX-HEAPIFY(A,13)，此时不再有新的数据交换
 
 ​	
 
