添加 6.2 练习题答案

--- a/练习/第06章 堆排序.md
+++ b/练习/第06章 堆排序.md
@@ -42,7 +42,35 @@
 2. 在（b）中通过交换A[3]与A[6]的值，结点3恢复了最大堆的性质，但又导致了结点6违反了最大堆的性质。递归调用MAX-HEAPIFY(A,6)，此时i=6。
 3. 在（c）中，通过交换A[6]和A[13]的值，结点6恢复最大堆性质。再次调用MAX-HEAPIFY(A,13)，此时不再有新的数据交换
 
-​	
+### 6.2-3	
 
+ 当A[i]比其孩子都大时，不会对堆进行任何操作也不会进行递归。
 
+### 6.2-4
+
+因为当`i>A.heap-size/2`时 i处于叶子节点位置，所以不会进行任何操作。
+
+### 6.2-5
+
+```
+MAX-HEAPIFY(A,i)
+	index = i 
+	while index <= A.heap-size/2
+		l = left(i)
+		r = right(i)
+		if l<=A.heap-size and A[l] > A[index]
+			largest = l
+        else largest = index
+        if r<=A.heap-size and A[r] > A[largest]
+			largest = r
+		if largest != index
+			exchange A[index] with A[largest]
+			index = largest
+		else 
+			return
+```
+
+### 6.2-6
+
+`MAX-HEAPIFY`的最坏运行情况应该是从根节点到叶子节点的最远距离，也就是树的高，所以最坏运行时间为$Ω(lgn)$。
 
