--- a/练习/第06章 堆排序.md
+++ b/练习/第06章 堆排序.md
@@ -42,6 +42,25 @@
 2. 在（b）中通过交换A[3]与A[6]的值，结点3恢复了最大堆的性质，但又导致了结点6违反了最大堆的性质。递归调用MAX-HEAPIFY(A,6)，此时i=6。
 3. 在（c）中，通过交换A[6]和A[13]的值，结点6恢复最大堆性质。再次调用MAX-HEAPIFY(A,13)，此时不再有新的数据交换
 
+### 6.2-2
+
+```
+MIN-HEAPIFY(A,i)
+	l = left(i)
+	r = right(i)
+	if l<=A.heap-size and A[l]<A[i]
+		least = l
+	else 
+		least = i
+	if r<=A.heap-size and A[r]<A[least]
+    	least = r
+    if least != i
+    	exchange A[i] with A[least]
+    	MIN-HEAPIFY(A,least)
+```
+
+它们的运行时间是一样的，因为除了比较之外没有任何差异。
+
 ### 6.2-3	
 
  当A[i]比其孩子都大时，不会对堆进行任何操作也不会进行递归。
