添加6.3练习题答案

--- a/练习/第06章 堆排序.md
+++ b/练习/第06章 堆排序.md
@@ -93,3 +93,25 @@ MAX-HEAPIFY(A,i)
 
 `MAX-HEAPIFY`的最坏运行情况应该是从根节点到叶子节点的最远距离，也就是树的高，所以最坏运行时间为$Ω(lgn)$。
 
+## 6.3 建堆
+
+### 6.3-1
+
+![](https://raw.githubusercontent.com/Oliver59/IntroductionToAlgorithms/master/%E7%BB%83%E4%B9%A0/Image/06/6.3-1.png)
+
+ （a）包含9个元素的输入数组及其对应的二叉树。图中显示调用MAX-HEAPIFY（A，i）前循环变量i指向结点4的情况。
+
+（b）执行MAX-HEAPIFY（A，4）后的结果。下一次迭代循环变量i指向结点3。
+
+（c）~（d）后续迭代操作后的结果。
+
+（e）执行完BUILD-MAX-HEAP时的最大堆。
+
+### 6.3-2
+
+因为递减执行的时候可以确保在执行`MAX-HEAPIFY(A，i)`时i中的子结点都是一个最大堆。
+
+### 6.3-3
+
+## 6.4 堆排序算法
+
